--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VirtualRealityBP/Maps/StartupMap.StartupMap
+EditorStartupMap=/Game/VirtualRealityBP/Maps/MotionControllerMap.MotionControllerMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
@@ -33,6 +33,9 @@ r.EyeAdaptionQuality=0
 r.SSR.MaxRoughness=0
 r.rhicmdbypass=0
 r.TiledReflectionEnvironmentMinimumCount=10
+r.MobileMSAA=2
+r.DefaultFeature.AutoExposure=False
+r.GBufferFormat=3
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAutoCreateNavigationData=True
@@ -61,4 +64,12 @@ UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtra
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
 bEnableDynamicMaxFPS=True
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+AudioMaxChannels=0
+AudioNumSourceWorkers=0
+MinSDKVersion=21
+TargetSDKVersion=21
+bSupportsVulkan=True
+bBuildForES31=True
 
