--- a/Config/steamvr_ue_editor_app.json
+++ b/Config/steamvr_ue_editor_app.json
@@ -5,7 +5,7 @@
 			"app_key": "application.generated.ue.virtual-reality-bp-game-template-14469661.ue4editor.exe",
 			"launch_type": "url",
 			"url": "steam://launch/",
-			"action_manifest_path": "C:/Users/Student 2020/Desktop/VAS1L/_Virtual Catwalk Project/The_VR_Catwalk_Project/The_VR_Catwalk_Project/Config/SteamVRBindings/steamvr_manifest.json",
+			"action_manifest_path": "D:/SAXION/GRADUATION/XR Lab/CloudProjects/DigitalFashion/GitRepository/The_VR_Catwalk_Project/Config/SteamVRBindings/steamvr_manifest.json",
 			"strings":
 			{
 				"en_us":
