--- a/VFX_VirtFashExp.uproject
+++ b/VFX_VirtFashExp.uproject
@@ -5,8 +5,9 @@
 	"Description": "",
 	"Plugins": [
 		{
-			"Name": "OctanePlugin",
-			"Enabled": true
+			"Name": "Prefabricator",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/39ccbbf668e84847890992df9922e355"
 		}
 	],
 	"TargetPlatforms": [
