--- a/VFX_VirtFashExp.uproject
+++ b/VFX_VirtFashExp.uproject
@@ -12,6 +12,10 @@
 		{
 			"Name": "OctanePlugin",
 			"Enabled": false
+		},
+		{
+			"Name": "HDRIBackdrop",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
