Teleport-blueprints. Map update

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,8 +24,8 @@ DefaultGraphicsPerformance=EGraphicsPreset::Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
-r.DefaultFeature.AmbientOcclusion=False
-r.DefaultFeature.AmbientOcclusionStaticFraction=False
+r.DefaultFeature.AmbientOcclusion=True
+r.DefaultFeature.AmbientOcclusionStaticFraction=True
 vr.InstancedStereo=True
 r.SeparateTranslucency=0
 r.HZBOcclusion=0
@@ -35,7 +35,10 @@ r.rhicmdbypass=0
 r.TiledReflectionEnvironmentMinimumCount=10
 r.MobileMSAA=2
 r.DefaultFeature.AutoExposure=False
-r.GBufferFormat=3
+r.GBufferFormat=0
+r.ForwardShading=True
+r.DefaultFeature.LensFlare=True
+r.TemporalAA.Upsampling=True
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAutoCreateNavigationData=True
